#ifndef FNIFI_FILE_COLLECTION_HPP
#define FNIFI_FILE_COLLECTION_HPP

#include "fnifi/connection/IConnection.hpp"
#include "fnifi/utils/SyncDirectory.hpp"
#include "fnifi/file/AFileHelper.hpp"
#include "fnifi/file/File.hpp"
#include "fnifi/utils/utils.hpp"
#include <unordered_set>
#include <unordered_map>
#include <string>
#include <time.h>
#include <filesystem>
#include <memory>
#ifdef ENABLE_OPENCV
#include <opencv2/opencv.hpp>
#endif  /* ENABLE_OPENCV */


namespace fnifi {

class FNIFI;

namespace file {

class Collection : virtual public AFileHelper {
public:
    Collection(connection::IConnection* indexingConn,
               utils::SyncDirectory& storing,
               size_t maxCopiesSz = 1024000000L);
    /**
     * @warning use only if non associated to a FNIFI instance
     */
    Collection(Collection&& other) noexcept;
    ~Collection() override;
    void defragment();
    std::string getFilePath(fileId_t id) override;
    std::string getLocalPreviewFilePath(fileId_t id) override;
    std::string getLocalCopyFilePath(fileId_t id) override;
    struct stat getStats(fileId_t id) override;
    fileBuf_t read(fileId_t id, bool nocache = false) override;
    std::string getName() const override;
    std::unordered_map<fileId_t, File>::const_iterator begin() const;
    std::unordered_map<fileId_t, File>::const_iterator end() const;
    std::unordered_map<fileId_t, File>::iterator begin();
    std::unordered_map<fileId_t, File>::iterator end();
    size_t size() const;

private:
    using offset_t = size_t;
    using lenght_t = unsigned short;
    struct __attribute__((packed)) MapNode {
        offset_t offset;
        lenght_t lenght;
    };
    struct __attribute__((packed)) Info {
        struct timespec lastIndexing = {0, 0};
    };
    struct FileTimed {
        std::filesystem::path path;
        std::filesystem::file_time_type time;

        struct TimeDescending {
            bool operator()(const FileTimed& a, const FileTimed& b) const;
        };
    };

    void index(
        std::unordered_set<std::pair<const file::File*, fileId_t>>& removed,
        std::unordered_set<const file::File*>& added,
        std::unordered_set<file::File*>& modified);
#ifdef ENABLE_OPENCV
    static fileBuf_t makePreview(const cv::Mat& img);
#endif  /* ENABLE_OPENCV */
    void removePreviewFile(fileId_t id) const;
    void removeCopyFile(fileId_t id) const;
    void updateCopiesSz();

    std::unordered_map<fileId_t, File> _files;
    connection::IConnection* _indexingConn;
    std::unique_ptr<utils::SyncDirectory::FileStream> _mapping;
    std::unique_ptr<utils::SyncDirectory::FileStream> _filepaths;
    std::unique_ptr<utils::SyncDirectory::FileStream> _info;
    std::unordered_set<fileId_t> _availableIds;
    const size_t _maxCopiesSz;
    size_t _copiesSz;

    friend class fnifi::FNIFI;
};

}  /* namespace file */
}  /* namesapce fnifi */

#endif  /* FNIFI_FILE_COLLECTION_HPP */
